# maverick

./: .gitignore  DEMO_DRILL.md  README.md  SETUP.md  idea.md
app/: app.json  package-lock.json  package.json  tailwind.config.js
app/__tests__/: BriefBuilder.test.ts  GemmaClient.test.ts  Orchestrator.test.ts  buildContext.test.ts  repos.test.ts
app/app/: _layout.tsx  camera-capture.tsx  gemma-processing.tsx  live-visit.tsx  record-happenings.tsx  record-visit.tsx  share.tsx  upload.tsx
app/app/(tabs)/: _layout.tsx  chat.tsx  inbox.tsx  index.tsx  noticed.tsx  profile.tsx  records.tsx  timeline.tsx
app/src/: config.ts  types.ts
app/src/ui/: ChatBubble.tsx  ConfidenceBadge.tsx  FlagCard.tsx
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  redis_client.py
backend/app/gemma/: client.py
backend/app/gemma/prompts/: chat.py  follow_ups.py  lab_pdf.py  watch_list.py
backend/app/render/: brief.html.jinja
backend/app/routes/: agent_assist.py  brief.py  chat.py  extract.py  live.py  live_camera.py  visit_analysis.py
backend/tests/: conftest.py  test_brief.py  test_chat.py  test_extract.py  test_gemma_client.py  test_health.py  test_live.py
companion/: .env.example  README.md  index.html  package-lock.json  package.json
companion/src/: App.css  App.tsx  index.css  patient.ts  prompts.ts  useLive.ts
training/: README.md  finetune-healthcare.ipynb
translator/: .env.example  README.md  index.html  package-lock.json  package.json
translator/src/: App.css  App.tsx  index.css  languages.ts  prompts.ts  useTranslator.ts
(+14 files in other folders)
